syntax = "proto3";

package io.opencola.security.protobuf;

message PublicKey {
  bytes encoded = 1;
}

enum SignatureAlgorithm {
  SHA3_256_WITH_ECDSA = 0;
}

message Signature {
  SignatureAlgorithm algorithm = 1;
  bytes bytes = 2;
}

enum EncryptionTransformation {
  ECIES_WITH_AES_CBC = 0;
}

message EncryptedMessage {
  EncryptionTransformation transformation = 1;
  bytes bytes = 2;
}